[package]
name = "final"
version = "0.1.0"
authors = ["Jack Wrenn <me@jswrenn.com>"]
description = "Wrap a value in a type that does not give out mutable references."
keywords = ["final", "immutable"]
categories = ["data-structures"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jswrenn/final"
